[package]
name = "hush"
version = "0.1.0"
authors = ["Nokola <nikolami@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
listenfd = "0.3"
serde = "^1.0.99"
serde_json = "^1.0.40"
failure = "0.1.5"
redis = "0.12.0"
futures = "0.1.28"